# test_action

./: .pre-commit-config.yaml  .sqlfluff  Makefile  pyproject.toml
.github/workflows/: deploy.yaml  pre-commits.yaml
test_bq/: .user.yml  dbt_project.yml  profiles.yml
test_bq/models/example/: my_first_dbt_model.sql  schema.yml
